# flashtap

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  Shooter.cpp  Source.cpp  meson.build
.github/workflows/: debug-build-clang-14.yml  debug-build-clang-15.yml  debug-build-clang-16.yml  debug-build-gcc-12.yml  minsizerel-build-clang-14.yml  minsizerel-build-clang-15.yml  minsizerel-build-clang-16.yml  minsizerel-build-gcc-12.yml  release-build-clang-14.yml  release-build-clang-15.yml  release-build-clang-16.yml  release-build-gcc-12.yml  relwithdebinfo-build-clang-14.yml  relwithdebinfo-build-clang-15.yml  relwithdebinfo-build-clang-16.yml  relwithdebinfo-build-gcc-12.yml
Meta/: CONTRIBUTORS.md  README.md  TODO_EN.md  TODO_RU.md
engine/network/: ClientUDP.cpp  UDPConnection.cpp
src/: Shooter.cpp  Shooter.h  ShooterConsts.h  Source.cpp
src/debug/: MenuInit.cpp  MenuInit.h
src/engine/: Consts.h  Engine.cpp
src/engine/io/: Screen.cpp  Screen.h
src/engine/network/: ClientUDP.cpp
src/engine/utils/: Log.cpp
src/network/: ShooterClient.cpp  ShooterClient.h  ShooterServer.cpp  ShooterServer.h
src/player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
src/weapon/: Gun.h  Rifle.h  Shotgun.h  Weapon.cpp  Weapon.h
